fix: resolve security vulnerabilities and CI/CD failures
Security fixes:
- Replace wildcard CORS with explicit allowed origins
- Add H2C smuggling mitigation in nginx config
- Fix Python import organization and exception chaining

CI/CD improvements:
- Fix docker-compose command (remove hyphen)
- Fix cyclonedx-py SBOM generation arguments
- Remove continue-on-error flags from fixed checks
- Restore Pylint threshold to 8.0

Code quality improvements:
- Move imports to module level in aircraft.py and user_data.py
- Add proper exception chaining with 'from e'
- Remove unnecessary else-after-return
- Refactor save_user_data to reduce cyclomatic complexity
- Extract helper functions: _safe_int, _safe_float, _save_aircraft, _save_budget_state

All checks now passing:
- Python linting (Pylint, Flake8)
- Semgrep SAST security findings
- Docker Compose validation
- SBOM generation

--- a/.github/workflows/sbom-generation.yml
+++ b/.github/workflows/sbom-generation.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Generate CycloneDX SBOM
         run: |
           cyclonedx-py requirements \
-            --input backend/requirements.txt \
-            --output backend-sbom-cyclonedx.json \
+            -i backend/requirements.txt \
+            -o backend-sbom-cyclonedx.json \
             --format json
 
       - name: Generate SPDX SBOM with syft
