--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -51,13 +51,12 @@ jobs:
             --show-source
 
       - name: Run Pylint
-        continue-on-error: true
         run: |
           pylint backend/app \
             --max-line-length=120 \
             --disable=C0111,R0903,R0913,R0917,E0401,W0621,W0603,W0613 \
             --output-format=colorized \
-            --fail-under=6.0
+            --fail-under=8.0
 
       - name: Run mypy (type checking)
         run: |
@@ -87,7 +86,6 @@ jobs:
           htmlhint frontend/**/*.html
 
       - name: Validate HTML
-        continue-on-error: true
         uses: Cyb3r-Jak3/html5validator-action@v7.2.0
         with:
           root: frontend/
@@ -116,13 +114,13 @@ jobs:
           ignore: DL3008
 
       - name: Run Checkov on Dockerfiles
-        continue-on-error: true
         uses: bridgecrewio/checkov-action@master
         with:
           directory: .
           framework: dockerfile
           output_format: cli
           quiet: false
+          soft_fail: true
 
   # Docker Compose linting
   docker-compose-lint:
@@ -134,20 +132,20 @@ jobs:
 
       - name: Validate docker-compose.ghcr.yml
         run: |
-          docker-compose -f infrastructure/docker-compose.ghcr.yml config > /dev/null
+          docker compose -f infrastructure/docker-compose.ghcr.yml config > /dev/null
 
       - name: Lint with docker-compose-linter
         uses: docker://replicated/dockerfilelint:latest
         continue-on-error: true
 
       - name: Run Checkov on docker-compose files
-        continue-on-error: true
         uses: bridgecrewio/checkov-action@master
         with:
           directory: infrastructure/
           framework: docker_compose
           output_format: cli
           quiet: false
+          soft_fail: true
 
   # YAML linting
   yaml-lint:
