--- a/infrastructure/nginx.conf
+++ b/infrastructure/nginx.conf
@@ -15,8 +15,18 @@ server {
     location /api/ {
         proxy_pass http://api:8000;
         proxy_http_version 1.1;
+
+        # Mitigate H2C smuggling: Only allow websocket upgrades
+        set $connection_upgrade "";
+        if ($http_upgrade = "websocket") {
+            set $connection_upgrade "upgrade";
+        }
+        if ($http_upgrade != "websocket") {
+            set $http_upgrade "";
+        }
+
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
