--- a/infrastructure/nginx.conf
+++ b/infrastructure/nginx.conf
@@ -16,9 +16,10 @@ server {
         proxy_pass http://api:8000;
         proxy_http_version 1.1;
 
-        # H2C smuggling mitigation: Do not forward Upgrade headers
+        # Security: Use explicitly configured server_name instead of $host
+        # to prevent Host header injection attacks (H2C smuggling mitigation)
         # WebSocket is not used in this application
-        proxy_set_header Host $host;
+        proxy_set_header Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
