--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -189,12 +189,14 @@ jobs:
         if: always() && hashFiles('hadolint-backend.sarif') != ''
         with:
           sarif_file: hadolint-backend.sarif
+          category: hadolint-backend
 
       - name: Upload hadolint frontend results
         uses: github/codeql-action/upload-sarif@v4
         if: always() && hashFiles('hadolint-frontend.sarif') != ''
         with:
           sarif_file: hadolint-frontend.sarif
+          category: hadolint-frontend
 
   # Secrets scanning
   gitleaks:
