--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
     hooks:
       - id: mypy
         files: ^backend/
+        exclude: ^backend/scripts/
         args: ["--config-file=backend/mypy.ini", "--ignore-missing-imports", "--no-strict-optional"]
         additional_dependencies: [pydantic, fastapi, asyncpg]
 
