fix: Filter Trivy SARIF to exclude MEDIUM/LOW severity alerts
Trivy was uploading all severity levels to GitHub Code Scanning despite the severity parameter. The severity filter only affects console output, not SARIF content.

Added post-processing step to filter SARIF file before upload:
- Remove 'note' level (LOW severity)
- Remove 'warning' level (MEDIUM severity)
- Keep only 'error' level (CRITICAL/HIGH severity)

This will reduce code scanning alerts from 66 to only actionable CRITICAL/HIGH issues, eliminating noise from unfixable base OS vulnerabilities.

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -140,12 +140,19 @@ jobs:
           image-ref: ${{ matrix.image.name }}:test
           format: 'sarif'
           output: 'trivy-${{ matrix.image.name }}.sarif'
-          severity: 'CRITICAL,HIGH,MEDIUM'
+          severity: 'CRITICAL,HIGH'
           vuln-type: 'os,library'
+
+      - name: Filter SARIF for CRITICAL and HIGH only
+        if: always() && hashFiles('trivy-${{ matrix.image.name }}.sarif') != ''
+        run: |
+          jq 'del(.runs[].results[] | select(.level == "note" or .level == "warning"))' \
+            trivy-${{ matrix.image.name }}.sarif > trivy-filtered.sarif
+          mv trivy-filtered.sarif trivy-${{ matrix.image.name }}.sarif
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: always() && hashFiles('trivy-${{ matrix.image.name }}.sarif') != ''
         with:
           sarif_file: 'trivy-${{ matrix.image.name }}.sarif'
 
