--- a/infrastructure/Dockerfile.frontend
+++ b/infrastructure/Dockerfile.frontend
@@ -9,8 +9,20 @@ COPY frontend/ /usr/share/nginx/html/
 # Copy custom nginx config for API proxying
 COPY infrastructure/nginx.conf /etc/nginx/conf.d/default.conf
 
+# Create non-root user and set permissions
+RUN addgroup -g 1000 appuser && \
+    adduser -D -u 1000 -G appuser appuser && \
+    chown -R appuser:appuser /usr/share/nginx/html /var/cache/nginx /var/run /var/log/nginx && \
+    touch /var/run/nginx.pid && \
+    chown -R appuser:appuser /var/run/nginx.pid
+
+USER appuser
+
 # Expose port 80
 EXPOSE 80
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
